--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <scope>compile</scope>
     </dependency>
     <dependency>
+   			<groupId>io.rest-assured</groupId>
+    		<artifactId>rest-assured</artifactId>
+    		<version>3.3.0</version>
+    		<scope>compile</scope>
+	</dependency>
+    <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>1.2.5</version>
